<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@color/colorSetting"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/setting_header"
            android:textColor="@color/colorText"
            android:textSize="30sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/dialogMusicSettingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dialogMusicImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/soundon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/music"
            android:textColor="@color/colorText"
            android:textSize="15sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">



        <Button
            android:id="@+id/howToPlayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:background="@drawable/setting_button"
            android:text="@string/how_to_play"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/levelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:background="@drawable/setting_button"
            android:text="@string/level_easy"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/producerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="11dp"
            android:background="@drawable/setting_button"
            android:text="@string/producer"
            android:textColor="@color/colorText" />

        <Button
            android:id="@+id/accelerometer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="35dp"
            android:background="@drawable/accelerometer"
            android:textColor="@color/colorText" />


    </LinearLayout>


</LinearLayout>